<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_main">Shopinvesta</string>
    <string name="action_settings">设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="sure">确认</string>
    <string name="shuzi_zimu">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="bottom_index">首页</string>
    <string name="bottom_chat">聊天</string>
    <string name="bottom_heyue">行情</string>
    <string name="bottom_otc">资讯</string>
    <string name="mine">我的</string>
    <string name="page_view_emtpy">暂无数据,点击刷新</string>
    <string name="page_view_network_error_hint">网络请求失败\n请点击重试</string>
    <string name="please_input_tuijian_code">请输入推荐码</string>
    <string name="please_input_pass_code">请输入登录密码</string>
    <string name="please_input_pass_code_again">请再次输入登录密码</string>
    <string name="please_input_jiaoyi_code">请输入交易密码</string>
    <string name="please_input_jiaoyi_code_again">请再次输入交易密码</string>
    <string name="login_account_tip2">手机号/邮箱</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="alreda_account">已有账户?</string>
    <string name="login_password">登录密码</string>
    <string name="code_regisger">立即注册</string>
    <string name="regist_account_phone_code">验证码</string>
    <string name="regist_account_phone_code_send">获取验证码</string>
    <string name="regist_account_email">邮箱注册</string>
    <string name="reset_passwored">设置密码</string>
    <string name="reset_passwored_again">再次输入密码</string>
    <string name="app_name">SealTalk</string>
    <string name="seal_login_text_login">登录</string>
    <string name="seal_login_phone_number">手机号</string>
    <string name="seal_login_toast_passwords_invalid">密码必须为6-20位字符，区分大小写</string>
    <string name="seal_login_toast_passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="seal_conversation_title_defult">聊天</string>
    <string name="profile_search_message">查看聊天记录</string>
    <string name="profile_message_notice">消息免打扰</string>
    <string name="profile_set_top">会话置顶</string>
    <string name="profile_clean_message">清除聊天记录</string>
    <string name="profile_screen_shot_notification">截屏通知</string>
    <string name="profile_screen_shot_notification_tips">开启后，在对话中截屏，所有成员都是收到通知</string>
    <string name="profile_clean_timing">定时清理群消息</string>
    <string name="profile_clean_timing_tips">设置定时清理后，系统会定时清理规定时间前的群消息，清理后的消息无法恢复，请谨慎设置</string>
    <string name="profile_all_group_member">全部群成员</string>
    <string name="profile_group_portrait">群头像</string>
    <string name="profile_group_name">群名称</string>
    <string name="profile_group_notice">群公告</string>
    <string name="profile_group_qrcode">群二维码</string>
    <string name="profile_group_manager">群管理</string>
    <string name="seal_dialog_select_clean_time_36">清理 36 小时前的消息</string>
    <string name="seal_dialog_select_clean_time_3">清理 3 天前的消息</string>
    <string name="seal_dialog_select_clean_time_7">清理 7 天前的消息</string>
    <string name="seal_set_clean_time_fail">设置失败</string>
    <string name="seal_set_clean_time_state_not">请设置时间</string>
    <string name="seal_set_clean_time_not_owner_tip">只有群主可以设置</string>
    <string name="seal_grant_permissions">您需要在设置中打开权限</string>
    <string name="person_main_page">个人主页</string>
    <string name="id">ID:</string>
    <string name="id1">ID</string>
    <string name="but_submit">提交</string>
    <string name="but_sure">确定</string>
    <string name="but_apply">申请</string>
    <string name="but_back">返回</string>
    <string name="code_phone_tip">短信验证码获取成功</string>
    <string name="set_new_pass">设置新密码</string>
    <string name="sure_new_pass">确认新密码</string>
    <string name="set_new_pass_tip">请输入6-16位数字+字母组合</string>
    <string name="sure_new_pass_tip">请再次输入新密码</string>
    <string name="must_has_shuzi">必须包含数字</string>
    <string name="must_has_zimu">必须包含字母</string>
    <string name="id_card_check2">实名认证</string>
    <string name="msg_code_again">重新获取</string>
    <string name="toast_login_again">登录用户身份过期，需要重新登录</string>
    <string name="toast_no_active">此账号尚未激活，请激活新账号或选择旧账号</string>
    <string name="share_text">分享注册</string>
    <string name="welcome_pager">欢迎页</string>
    <string name="net_error">网络连接失败，请检查网络状态</string>
    <string name="test_code">验证码</string>
    <string name="next">下一步</string>
    <string name="please_input_message_code">请输入验证码</string>
    <string name="phoneNumber">手机号</string>
    <string name="sign_up_email_hint">邮箱</string>
    <string name="inputVerificationCode">请输入验证码</string>
    <string name="number">数量</string>
    <string name="time">时间</string>
    <string name="coinName">名称</string>
    <string name="search">搜索</string>
    <string name="exit">退出登录</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputEmail">请输入邮箱地址</string>
    <string name="changePhone">修改手机</string>
    <string name="inputPhoneNum">请输入手机号码</string>
    <string name="aboutUS">关于我们</string>
    <string name="changeEmail">修改邮箱</string>
    <string name="loginPass">登录密码</string>
    <string name="tradePass">交易密码</string>
    <string name="verificationCode">验证码</string>
    <string name="sendVerificationCode">获取验证码</string>
    <string name="inputOldPass">请输入原密码</string>
    <string name="inputNewPass">请输入新密码</string>
    <string name="totalAmount2">总金额</string>
    <string name="walletAddress">钱包地址:</string>
    <string name="inputEmailCode">请输入邮箱验证码</string>
    <string name="_24HVolume">24H交易量</string>
    <string name="change">修改</string>
    <string name="phoneRegex">^[1](([3][0-9])|([4][5-9])|([5][0-3,5-9])|([6][5,6])|([7][0-8])|([8][0-9])|([9][1,8,9]))[0-9]{8}$</string>
    <string name="inputRightPhone">请输入正确手机号</string>
    <string name="finish">完成</string>
    <string name="loading_tip">--</string>
    <string name="beenApprove">您的身份认证已通过审核</string>
    <string name="registerUser">注册新用户</string>
    <string name="inputEmailAccount">请输入邮箱账号</string>
    <string name="recordNotice">请按抄写的顺序点击助记词,确认你的备份助记词正确</string>
    <string name="loginPassErrorNotice">登录密码不一致</string>
    <string name="tradePassErrorNotice">交易密码不一致</string>
    <string name="inputRigthEmail">请输入正确邮箱号</string>
    <string name="lastChat">近期聊天</string>
    <string name="myAttention">我的关注</string>
    <string name="myGroup">我的群组</string>
    <string name="recentlyChat">最近聊天</string>
    <string name="watchList">关注列表</string>
    <string name="joinedGroup">加入的群组</string>
    <string name="chat">私聊</string>
    <string name="favorite">关注</string>
    <string name="beenFavorite">已关注</string>
    <string name="addGroup">加入群聊</string>
    <string name="groupNum">当前群聊人数:0人</string>
    <string name="groupId">群聊ID</string>
    <string name="copy1">点击复制</string>
    <string name="userBalance">可用余额: %s SIA</string>
    <string name="userBalance1">可用余额: %s SIA ≈ %w CNY</string>
    <string name="redMoneyDes">恭喜发财,大吉大利</string>
    <string name="defaultRed"><![CDATA[0.00 <font><small>SIA</small></font>]]></string>
    <string name="transferInternal">内部转账</string>
    <string name="recived">接收方</string>
    <string name="transferNumber">转账数量</string>
    <string name="defaultFee">手续费: %s SIA</string>
    <string name="transferDes">转账说明:</string>
    <string name="transfer">转账</string>
    <string name="remainingRed">%s 个红包,剩余 %w 个</string>
    <string name="remainingRed1">%s 个红包,已抢完</string>
    <string name="reRed">%s 的红包</string>
    <string name="transferLog">转账记录</string>
    <string name="rewardLog">我的账单</string>
    <string name="inviteShare">推广分享</string>
    <string name="systemNotice">系统公告</string>
    <string name="setting">系统设置</string>
    <string name="aboutUs">关于我们</string>
    <string name="contactService">联系客服</string>
    <string name="resume">继续</string>
    <string name="failure">授权失败</string>
    <string name="title_dialog">提示</string>
    <string name="message_permission_rationale">授予程序以下权限:\n\n%1$s</string>
    <string name="message_permission_always_failed">请前往手机的设置界面进行以下权限授权:\n\n%1$s</string>
    <string name="message_install_failed">安装应用需要打开未知来源权限，请去设置中开启权限</string>
    <string name="personInfo">个人主页</string>
    <string name="edit">编辑</string>
    <string name="fans">粉丝</string>
    <string name="concerned">已关注</string>
    <string name="notConcerned">未关注</string>
    <string name="avatar">头像</string>
    <string name="nickName">昵称</string>
    <string name="account_information">账户信息</string>
    <string name="Camera">拍一张</string>
    <string name="chooseImage">相册选择</string>
    <string name="inputNickName">请输入昵称</string>
    <string name="changeNickName">修改昵称</string>
    <string name="recivedId">ID</string>
    <string name="rewardType">奖励方式</string>
    <string name="rewardNumber">奖励数量</string>
    <string name="news">资讯</string>
    <string name="newsDetail">资讯详情</string>
    <string name="systemDetail">系统详情</string>
    <string name="announcement">公告</string>
    <string name="announcementContent">公告内容</string>
    <string name="redEnvelopeRecord">红包记录</string>
    <string name="email">邮箱账号</string>
    <string name="language">系统语言</string>
    <string name="currencyUnit">货币单位</string>
    <string name="systemSetting">系统设置</string>
    <string name="inputOldPhoneNum">请输入原手机号</string>
    <string name="noVerificationPhone">原手机号无法验证?</string>
    <string name="inputNewPhoneNum">请输入新手机号</string>
    <string name="inputOldEmail">请输入原邮箱账号</string>
    <string name="inputNewEmailNum">请输入新邮箱账号</string>
    <string name="inputNewPassAgain">请再次输入新密码</string>
    <string name="changeLoginPass">修改登录密码</string>
    <string name="changeTradePass">修改交易密码</string>
    <string name="noVerificationEmail">原邮箱无法验证?</string>
    <string name="_24HVolumeGlobal">全球交易量(24h):</string>
    <string name="outline">概况</string>
    <string name="publishTime">发行时间</string>
    <string name="officialWebsite">官网</string>
    <string name="leastTradeLog">最近交易记录</string>
    <string name="receipt">收款</string>
    <string name="copyReveive">复制收款地址</string>
    <string name="saveReceive">保存收款码</string>
    <string name="currentBalance">当前余额:</string>
    <string name="transferAmount">转账金额:</string>
    <string name="minerFee">矿工费:</string>
    <string name="remarks1">备注:</string>
    <string name="inputReceiveAddress">请输入收款人钱包地址</string>
    <string name="inputTransferAmount">请输入转账金额</string>
    <string name="optional">选填</string>
    <string name="amount1">金额:</string>
    <string name="receivedAddress">收款地址:</string>
    <string name="payAddress">付款地址:</string>
    <string name="block">区块:</string>
    <string name="transferDetail">转账详情</string>
    <string name="tradeOrderNum">交易号:</string>
    <string name="inputPhoneEmail">请输入手机号/邮箱</string>
    <string name="inputAccountPass">请输入账号密码</string>
    <string name="sendRed">发红包</string>
    <string name="redNum">红包数量</string>
    <string name="inputRedAmount">输入红包总金额</string>
    <string name="inputRedNumber">输入红包数量</string>
    <string name="totalNum">本群共%s人</string>
    <string name="groupManager">群组管理</string>
    <string name="changeGroupInfo">修改群资料</string>
    <string name="groupName">群聊名称</string>
    <string name="lockProfit">理财收益</string>
    <string name="profitLog">收益记录</string>
    <string name="chooseLockTime">请选择理财周期</string>
    <string name="inputLockNum">请输入SIA数量</string>
    <string name="threeMonth">3个月</string>
    <string name="defaultProfitRatio">收益率: s%</string>
    <string name="estimatedTotalProfit">预计总收益: s%</string>
    <string name="locked">开始理财</string>
    <string name="lockLog">历史记录</string>
    <string name="intoEnvelope">塞钱进红包</string>
    <string name="description">说明</string>
    <string name="notice1">1.红包可分享至微信</string>
    <string name="notice2">2.领取红包需填写手机号码</string>
    <string name="notice3">3.区块链红包发送需要节点确认，抢到红包后请耐心等待资产到账</string>
    <string name="transferNotice">矿工费收取ETH，账户内必须有0.001ETH以上的余额才能转账成功。矿工费实际收取以转账详情页面的金额为准（大约0.00005ETH~0.0005ETH）</string>
</resources>