<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/Camera"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/chooseImage"
        android:textColor="@color/black" />

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:text="@string/cancel"
        android:textColor="@color/black" />
</LinearLayout>