<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/top_layout"
        layout="@layout/title_leftbut_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:text="@string/totalAmount2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/etInputAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:hint="0"
            android:inputType="number"
            android:padding="@dimen/dp_14"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide_hight"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/divide_line" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/userBalance1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_13" />

    <LinearLayout
        android:id="@+id/number_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_15"
            android:text="@string/redNum"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dp_15"
            android:text="个"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/but_height"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@drawable/btn_next"
        android:enabled="false"
        android:text="@string/intoEnvelope"
        android:textColor="@color/btn_login_text"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_35"
        android:text="@string/description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:padding="@dimen/dp_5"
        android:text="@string/notice1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:padding="@dimen/dp_5"
        android:text="@string/notice2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:padding="@dimen/dp_5"
        android:text="@string/notice3" />
</LinearLayout>