<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_item_height"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:src="@drawable/back_arrow" />

        <ImageView
            android:id="@+id/ivScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:src="@drawable/icon6_saomiao" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/currentBalance"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/walletAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/etWalletAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etWalletAddress" />

        <EditText
            android:id="@+id/etWalletAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890"
            android:hint="@string/inputReceiveAddress"
            android:inputType="text"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/transferAmount"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/etTransferAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etTransferAmount" />

        <EditText
            android:id="@+id/etTransferAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:enabled="false"
            android:hint="@string/inputTransferAmount"
            android:inputType="numberDecimal"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/etWalletAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/minerFee"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/etMinerFee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etMinerFee" />

        <EditText
            android:id="@+id/etMinerFee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:enabled="false"
            android:hint="0.0"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/etTransferAmount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/remarks1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/etRemarks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etRemarks" />

        <EditText
            android:id="@+id/etRemarks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:enabled="false"
            android:hint="@string/optional"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/etMinerFee" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textView4,textView5,textView6,textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/btn_next"
        android:gravity="center"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/next"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/transferNotice"
        android:textSize="@dimen/sp_13" />

</LinearLayout>